--- a/.github/workflows/playwright_comment.yml
+++ b/.github/workflows/playwright_comment.yml
@@ -100,5 +100,6 @@ jobs:
           #   :heavy_check_mark: No visual differences introduced by this PR.
 
           #   <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.event.workflow_run.id }}#artifacts">View Playwright Report</a> (note: open the "playwright-report" artifact)
+          # todo
           # TODO: uncomment
           # update-only: true
